--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -183,6 +183,7 @@ jobs:
         with:
           name: code-coverage-${{ matrix.runs-on }}
           path: ${{ github.workspace }}/engines-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+          merge-multiple: true
   financial-assistance:
     needs: [brakeman-engines]
     runs-on: ubuntu-20.04
@@ -259,6 +260,7 @@ jobs:
         with:
           name: code-coverage-${{ matrix.runs-on }}
           path: ${{ github.workspace }}/coverage/fa_${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+          merge-multiple: true
   benefit-sponsors:
     needs: [brakeman-engines]
     runs-on: ubuntu-20.04
@@ -356,6 +358,7 @@ jobs:
         with:
           name: code-coverage-${{ matrix.runs-on }}
           path: ${{ github.workspace }}/bs-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+          merge-multiple: true
   rspec:
     needs: [brakeman, brakeman-engines]
     runs-on: ubuntu-latest
@@ -458,6 +461,7 @@ jobs:
         with:
           name: code-coverage-${{ matrix.runs-on }}
           path: ${{ github.workspace }}/coverage/${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+          merge-multiple: true
   cucumber:
     needs: [brakeman, brakeman-engines]
     runs-on: ubuntu-latest
@@ -585,6 +589,7 @@ jobs:
         with:
           name: code-coverage-${{ matrix.runs-on }}
           path: ${{ github.workspace }}/coverage/cukes-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+          merge-multiple: true
   quality-workbench:
     needs: [engines, benefit-sponsors, rspec, cucumber]
     if: always()
@@ -625,8 +630,9 @@ jobs:
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-report
+          name: code-coverage-report-${{ matrix.runs-on }}
           path: coveragereport/*
+          merge-multiple: true
       - name: Write to Job Summary
         run: cat coveragereport/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
       - name: copy coverage badge
