--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -612,8 +612,10 @@ jobs:
       - name: Download code coverage artifact
         uses: actions/download-artifact@v4
         with:
-          name: code-coverage
+          name: code-coverage-${{ matrix.runs-on }}
           path: coverage
+          pattern: code-coverage-*
+          merge-multiple: true
       - name: Setup .NET Core # Required to execute ReportGenerator
         uses: actions/setup-dotnet@v3
         with:
