--- a/.github/workflows/rspec-report.yml
+++ b/.github/workflows/rspec-report.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Run tests
         run: bundle exec rspec spec/${{ matrix.folder }} --format json --out ci/rspec/${{matrix.folder}}-rspec-report.json
       - name: Upload build artifact
-        uses: actions/upload-artifcat@v3
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.folder }}
           path: ci/rspec/${{ matrix.folder }}-rspec-report.json
@@ -161,7 +161,7 @@ jobs:
       - name: Run tests
         run: bundle exec rspec components/${{ matrix.folder }} --format json --out ci/rspec/components-${{matrix.folder}}-rspec-report.json
       - name: Upload build artifact
-        uses: actions/upload-artifcat@v3
+        uses: actions/upload-artifact@v3
         with:
           name: components-${{ matrix.folder }}
           path: ci/rspec/components-${{ matrix.folder }}-rspec-report.json
@@ -172,7 +172,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Download all artifacts into the provided directory
-      - uses: actions/download-artifcat@v3
+      - uses: actions/download-artifact@v3
         with:
           path: ci/rspec/compressed-reports
 
